  	* device/lib/mos6502/_ret01.s,
  	  device/lib/mos6502/_ret23.s,
	  device/lib/mos6502/_ret4567.s,
	  device/lib/mos65c02/_ret01.s,
  	  device/lib/mos65c02/_ret23.s,
	  device/lib/mos65c02/_ret4567.s,
	  device/lib/mos6502-stack-auto/_ret01.s,
  	  device/lib/mos6502-stack-auto/_ret23.s,
	  device/lib/mos6502-stack-auto/_ret4567.s
	  Remove unnecessary .optsdcc directive.

2023-12-03 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c
	  Fix bug #3511
	* src/mos6502/gen.c,
	  src/SDCCsymt.c
  	  Add limited support to return aggregates to mos6502 port.
  	* device/lib/div.c,
  	  device/lib/ldiv.c,
  	  device/include/stdlib.h
  	  Add div and ldiv to the mos6502 standard library.
  	* device/lib/_divulonglong.c
  	  Trivial spelling fix.
  	* sdas/as6500/r6500.h,
  	  sdas/as6500/r65adr.c,
  	  sdas/as6500/r65mch.c,
  	  sdas/as6500/pst.c
  	  Merge several minor changes from upstream asxxxx 5.50
  	* support/regression/MakeList,
  	  support/regression/tests/bigstack.c.in,
  	  support/regression/tests/div.c,
  	  support/regression/tests/gcc-roture-execute-20131127-1.c
  	  Enable additional tests for mos6502.
  	  
2023-12-02 Gabriele Gorla <gorlik@yahoo.com>

  	* src/mos6502/gen.c,
  	  support/regression/tests/structreturn.c.in,
	  support/regression/tests/gcc-torture-execute-va-arg-4.c,
  	  support/regression/tests/gcc-torture-execute-va-arg-23.c,
	  support/regression/tests/gcc-torture-execute-struct-ret-1.c,
  	  support/regression/tests/gcc-torture-execute-strct-varg-1.c,
	  support/regression/tests/gcc-torture-execute-pr60017.c,
  	  support/regression/tests/gcc-torture-execute-920625-1.c,
	  support/regression/tests/funptrsstructreturn.c,
  	  support/regression/tests/div.c,
	  support/regression/tests/bug-3385.c,
	  support/regression/tests/bug-3368.c,
	  support/regression/tests/bug-2776.c,
	  support/regression/tests/bigreturn-remat.c.in,
	  support/regression/MakeList,